# gobject-introspection

./: .dir-locals.el  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .topmsg  AUTHORS  CONTRIBUTORS  COPYING  ChangeLog  ChangeLog.pre-git  HACKING  MAINTAINERS  MSVC.README.rst  Makefile-cmph.am  Makefile-examples.am  Makefile-gir.am  Makefile-girepository.am  Makefile-giscanner.am  Makefile-msvcproj.am  Makefile-tools.am  Makefile.am  Makefile.introspection  NEWS  README  README.msvc  README.rst  TODO  autogen.sh  common.mk  config.h.win32.in  configure.ac  g-ir-diff  gcov.mak  gidl.dtd  gobject-introspection-1.0.pc.in  gobject-introspection-no-export-1.0.pc.in  gobject-introspection.doap  gobject-introspection.pc.in  (+7 more)
c-tools/: meson.build
docs/reference/: Makefile.am  gi-decl-list.txt  gi-decl.txt  gi-docs.sgml  gi-docs.xml  gi-gir-reference.xml  gi-gir.sgml  gi-overview.xml  gi-sections.txt  gi-struct-hierarchy.xml  gi.types  girepository.toml.in  meson.build  overview-building.xml  overview-programming.xml  version.xml.in
gir/: DBus-1.0.gir  DBusGLib-1.0.gir  Everything-1.0-expected.gir  GIMarshallingTests-1.0-expected.gir  GL-1.0.gir  GLib-2.0.xpath  GObject-2.0.xpath  Makefile.am  Vulkan-1.0.gir  cairo-1.0.gir  cairo-1.0.gir.in  everything.c  everything.h  fontconfig-2.0.gir  freetype2-2.0.gir  generate_source_list.py  gimarshallingtests.c  gimarshallingtests.h  gio-2.0-good.gir  gio-2.0.c  glib-2.0-good.gir  glib-2.0.c  glib-2.0.gir  gmodule-2.0.c  gobject-2.0-good.gir  gobject-2.0.c  gobject-2.0.gir  libxml2-2.0.gir  meson.build  update-glib-sources  xfixes-4.0.gir  xft-2.0.gir  xlib-2.0.gir  xrandr-1.3.gir
giscanner/: Makefile.am  __init__.py  annotationmain.py  annotationparser.py  annotationpatterns.py  ast.py  cachestore.py  ccompiler.py  cgobject.py  codegen.py  config.py.in  docbookdescription.py  docbookwriter.py  docmain.py  docwriter.py  dumper.py  gdumpparser.py  gidlparser.py  gidlwriter.py  gircomparator.py  girparser.py  girwriter.py  giscannermodule.c  glibast.py  glibtransformer.py  gobjecttreebuilder.py  grealpath.h  introspectablepass.py  libtoolimporter.py  maintransformer.py  mallard-C-class.tmpl  mallard-C-default.tmpl  mallard-C-enum.tmpl  mallard-C-function.tmpl  mallard-C-method.tmpl  mallard-C-namespace.tmpl  mallard-C-property.tmpl  mallard-C-record.tmpl  mallard-C-signal.tmpl  mallard-C-vfunc.tmpl  (+31 more)
giscanner/collections/: __init__.py  counter.py  ordereddict.py
giscanner/doctemplates/: base.tmpl  class.tmpl  mallard-base.tmpl  namespace.tmpl
giscanner/gir/: c.xsd  gir.xsd  glib.xsd  xml.xsd
py-tools/: g-ir-tool-template.in  meson.build
py-tools/giscanner/: ccompiler.py  dumper.py  meson.build  message.py  scannerlexer.l  scannerparser.y
src/: Makefile  Makefile.am  clexer.l  cparser.y  g-idl-offsets.pl  gen-introspect.c  gen-introspect.h  gidlmodule.c  gidlnode.c  gidlnode.h  gidlparser.c  gidlwriter.c  ginfo.c  ginvoke.c  girepository.c  girepository.h  gmetadata.c  gmetadata.h  scanner.c  scanner.h  scannerlexer.l  scannerparser.y  scannerwriter.c
tests/: Makefile  Makefile.am  array.gir  array.test  boxed.gir  boxed.test  constant.gir  constant.test  enum.gir  enum.test  errors.gir  errors.test  extended.gir  function.gir  function.test  gi-tester  gimarshallingtests.c  gimarshallingtests.h  gobject.gir  gobject.test  interface.gir  interface.test  meson.build  object.gir  object.test  roundtrips.sh  struct.gir  struct.test  test_gobject.py  types.gir  types.test  union.gir  union.test  xref1.gir  xref1.test  xref2.gir  xref2.test
tests/doctool/: GIRepository-2.0-C-expected.xml  GIRepository-2.0-Python-expected.page  GIRepository-2.0-Python-expected.xml  GIRepository-2.0-expected.xml  Makefile.am  Regress-1.0-expected.xml  doc-examples-obj.c  doc-examples-obj.h
tests/everything/: Everything-1.0-expected.gir  Makefile.am  everything.c  everything.h  gitesttypes.c  gitesttypes.h
tests/invoke/: Makefile  Makefile.am  genericmarshaller.c  invoke-namespace-find.sh  invoke.c  testfns-1.0.gir  testfns.c  testfns.gir  testfns.xml
tests/offsets/: Makefile.am  gen-gitestoffsets  gitestoffsets.c  meson.build  offsets.c  offsets.h  test-offsets  test_offsets.py
tests/parser/: Foo-expected.gidl  Foo-expected.gir  Makefile.am  foo-object.h  foo.c  utility-expected.gidl  utility-expected.gir  utility.h
tests/repository/: Makefile.am  gitestrepo.c  giteststructinfo.c  gitestthrows.c  gitypelibtest.c  meson.build
tests/scanner/: Annotation-1.0-expected.gir  Bar-1.0-expected.gir  BarApp-1.0-expected.gir  BarApp-1.0-expected.tgir  DrawableAdditions.xml  Foo-1.0-expected.gir  Foo-expected.gir  GetType-1.0-expected.gir  GtkFrob-1.0-expected.gir  GtkFrob-1.0-expected.tgir  Headeronly-1.0-expected.gir  Identfilter-1.0-expected.gir  Makefile.am  Regress-1.0-expected.gir  Regress-1.0-sections-expected.txt  RegressUnix-1.0-expected.gir  SLetter-1.0-expected.gir  Symbolfilter-1.0-expected.gir  TestInherit-1.0-expected.gir  Typedefs-1.0-expected.gir  Utility-1.0-expected.gir  WarnLib-1.0-expected.gir  annotation-1.0-expected.gir  annotation-1.0-expected.tgir  annotation-expected.gir  annotation.c  annotation.h  barapp.c  barapp.h  drawable-1.0-expected.gir  drawable-1.0-expected.tgir  drawable-expected.gir  drawable-injected-1.0-expected.gir  drawable-injected-1.0-expected.tgir  drawable.c  drawable.h  foo-1.0-expected.gir  foo-1.0-expected.tgir  foo-expected.gir  foo-object.h  (+38 more)
tests/types/: Makefile.am  gitesttypes.c
tests/warn/: Makefile.am  annotationparser.h  common.h  (+24 more)
tools/: Makefile.am  compiler.c  g-ir-annotation-tool.in  g-ir-doc-tool.in  g-ir-fix.py  g-ir-scanner  g-ir-scanner.in  g-ir-tool-template.in  gidlcompilercontext.c  gidlcompilercontext.h  gidlcompilerentrynode.c  gidlcompilerentrynode.h  gidlcompilertypenode.c  gidlcompilertypenode.h  gidlmodule.c  gidlmodule.h  gidlnode.c  gidlnode.h  gidlparser.c  gidlwriter.c  girmodule.c  girnode.c  girnode.h  girparser.c  girwriter.c  meson.build  quote-file.sh  scanner.c  scanner.h  scannerlexer.l  scannerparser.y  sourcescanner.c  sourcescanner.h  verbump.py
(+2892 files in other folders)
